--- a/templates/events/home.html
+++ b/templates/events/home.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Event Starter</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Event Starter{% endblock %}
+
+{% block body %}
     {% if user.is_authenticated %}
         <p>
             Welcome back {{ user.first_name }}! |
             <a href="/logout">Logout</a>
         </p>
+        <p>
+            <a href="{% url 'userprofiles:profile' user.username %}">
+                Go to my profile
+            </a>
+        </p>
     {% else %}
         <p>
-            <a href="{% url 'social:begin' 'twitter' %}?next={{ request.path }}">
-            Enter with Twitter
-            </a>
             <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">
             Enter with Facebook
             </a>
         </p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
