--- a/templates/events/create.html
+++ b/templates/events/create.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>create</title>
-</head>
-<body>
-	{{ form }}
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Create Event{% endblock %}
+
+{% block body %}
+   {{ eventform }}
+{% endblock %}
+	
