--- a/templates/events/home.html
+++ b/templates/events/home.html
@@ -3,7 +3,7 @@
 {% block title %}Event Starter{% endblock %}
 
 {% block body %}
-    {% if user.is_authenticated %}
+    <!--{% if user.is_authenticated %}
         <p>
             Welcome back {{ user.first_name }}! |
             <a href="/logout">Logout</a>
@@ -19,5 +19,284 @@
             Enter with Facebook
             </a>
         </p>
-    {% endif %}
+    {% endif %}-->
+    <header>
+        <nav>
+            <ul class="container">
+                <li>
+                    <a href="">Crea tu evento </a> |
+                </li>
+                <li>
+                    <a href=""> Regístrate </a> |
+                </li>
+                <li>
+                    <a href=""> Iniciar sesión</a>
+                </li>
+            </ul>
+        </nav>
+        <article class="container">
+            <h1>Follow the Party</h1>
+            <h3>Busca tu evento, dona, participa</h3>
+            <button type="button">"Crea un evento"</button>
+            <button type="button">"Busca un evento"</button>
+            </form>
+        </article>
+        <article class="container">
+            <p>Busca por:</p>
+            <a href="">Zona</a>
+            <a href="">Precio</a>
+        </article>
+    </header>
+    <section class=container>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <div>
+                <h4>Rock & ROll Party</h4>
+                <p>Esta fiesta va a estar bien chingona, todos los de dev.f van a ir y no te la puedes perder</p>
+            </div>
+            <div>
+                <figure>
+                    <img src="" alt="">
+                </figure>
+                <h5>Polanco D.F.</h5>
+            </div>
+            <div class = "Progress">
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <h5>$2,150</h5>
+                    <h6>Recaudado</h6>
+                </div>
+                <div>
+                    <h5>$10,000</h5>
+                    <h6>Meta</h6>
+                </div>
+                <div>
+                    <h5>10</h5>
+                    <h6>Días restantes</h6>
+                </div>
+            </div>
+        </article>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <div>
+                <h4>Rock & ROll Party</h4>
+                <p>Esta fiesta va a estar bien chingona, todos los de dev.f van a ir y no te la puedes perder</p>
+            </div>
+            <div>
+                <figure>
+                    <img src="" alt="">
+                </figure>
+                <h5>Polanco D.F.</h5>
+            </div>
+            <div class = "Progress">
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <h5>$2,150</h5>
+                    <h6>Recaudado</h6>
+                </div>
+                <div>
+                    <h5>$10,000</h5>
+                    <h6>Meta</h6>
+                </div>
+                <div>
+                    <h5>10</h5>
+                    <h6>Días restantes</h6>
+                </div>
+            </div>
+        </article>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <div>
+                <h4>Rock & ROll Party</h4>
+                <p>Esta fiesta va a estar bien chingona, todos los de dev.f van a ir y no te la puedes perder</p>
+            </div>
+            <div>
+                <figure>
+                    <img src="" alt="">
+                </figure>
+                <h5>Polanco D.F.</h5>
+            </div>
+            <div class = "Progress">
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <h5>$2,150</h5>
+                    <h6>Recaudado</h6>
+                </div>
+                <div>
+                    <h5>$10,000</h5>
+                    <h6>Meta</h6>
+                </div>
+                <div>
+                    <h5>10</h5>
+                    <h6>Días restantes</h6>
+                </div>
+            </div>
+        </article>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <div>
+                <h4>Rock & ROll Party</h4>
+                <p>Esta fiesta va a estar bien chingona, todos los de dev.f van a ir y no te la puedes perder</p>
+            </div>
+            <div>
+                <figure>
+                    <img src="" alt="">
+                </figure>
+                <h5>Polanco D.F.</h5>
+            </div>
+            <div class = "Progress">
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <h5>$2,150</h5>
+                    <h6>Recaudado</h6>
+                </div>
+                <div>
+                    <h5>$10,000</h5>
+                    <h6>Meta</h6>
+                </div>
+                <div>
+                    <h5>10</h5>
+                    <h6>Días restantes</h6>
+                </div>
+            </div>
+        </article>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <div>
+                <h4>Rock & ROll Party</h4>
+                <p>Esta fiesta va a estar bien chingona, todos los de dev.f van a ir y no te la puedes perder</p>
+            </div>
+            <div>
+                <figure>
+                    <img src="" alt="">
+                </figure>
+                <h5>Polanco D.F.</h5>
+            </div>
+            <div class = "Progress">
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <h5>$2,150</h5>
+                    <h6>Recaudado</h6>
+                </div>
+                <div>
+                    <h5>$10,000</h5>
+                    <h6>Meta</h6>
+                </div>
+                <div>
+                    <h5>10</h5>
+                    <h6>Días restantes</h6>
+                </div>
+            </div>
+        </article>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <div>
+                <h4>Rock & ROll Party</h4>
+                <p>Esta fiesta va a estar bien chingona, todos los de dev.f van a ir y no te la puedes perder</p>
+            </div>
+            <div>
+                <figure>
+                    <img src="" alt="">
+                </figure>
+                <h5>Polanco D.F.</h5>
+            </div>
+            <div class = "Progress">
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <h5>$2,150</h5>
+                    <h6>Recaudado</h6>
+                </div>
+                <div>
+                    <h5>$10,000</h5>
+                    <h6>Meta</h6>
+                </div>
+                <div>
+                    <h5>10</h5>
+                    <h6>Días restantes</h6>
+                </div>
+            </div>
+        </article>
+    </section>
+    <section class="container">
+        <h2>Así se ven los eventos en <span>Party Events</span></h2>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <h4>Poll Party, Miguel</h4>
+            <p>En esta fiesta Miguel se puso bien loco y nadie lo podía parar, se desvistió y se lanzó a la alberca</p>
+            <div>
+                <div>
+                    <h5>Ranking del evento</h5>
+                    <div>
+                        <figure><img src="" alt=""></figure>
+                        <figure><img src="" alt=""></figure>
+                        <figure><img src="" alt=""></figure>
+                        <figure><img src="" alt=""></figure>
+                        <figure><img src="" alt=""></figure>
+                    </div>
+                </div>
+                <div>
+                    <h5>Organizadores</h5>
+                    <h6>Miguel Nava</h6>
+                </div>
+                <div>
+                    <a href="">ver más fotos</a>
+                </div>
+            </div>
+        </article>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <h4>Poll Party, Miguel</h4>
+            <p>En esta fiesta Miguel se puso bien loco y nadie lo podía parar, se desvistió y se lanzó a la alberca</p>
+            <div>
+                <div>
+                    <h5>Ranking del evento</h5>
+                    <div>
+                        <figure><img src="" alt=""></figure>
+                        <figure><img src="" alt=""></figure>
+                        <figure><img src="" alt=""></figure>
+                        <figure><img src="" alt=""></figure>
+                        <figure><img src="" alt=""></figure>
+                    </div>
+                </div>
+                <div>
+                    <h5>Organizadores</h5>
+                    <h6>Miguel Nava</h6>
+                </div>
+                <div>
+                    <a href="">ver más fotos</a>
+                </div>
+            </div>
+        </article>
+    </section>
+    <footer>
+
+    </footer>
 {% endblock %}
