--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title%}{% endblock %}</title>
     <meta name="description" content="{% block meta_description %}{% endblock %}">
     <link rel="stylesheet" href="{% static "css/home.css" %}" />
+    <link rel="stylesheet" href="{% static "css/lib/bootstrap.min.css" %}" />
     {% block head %}{% endblock %}
 </head>
 <body>
