--- a/templates/events/event.html
+++ b/templates/events/event.html
@@ -1,23 +1,90 @@
 {% extends "base.html" %}
 
-{% block title %}Event Starter{% endblock %}
-
 {% block body %}
-    {% if user.is_authenticated %}
-        <p>
-            Welcome back {{ user.first_name }}! |
-            <a href="/logout">Logout</a>
-        </p>
-        <p>
-            <a href="{% url 'userprofiles:profile' user.username %}">
-                Go to my profile
-            </a>
-        </p>
-    {% else %}
-        <p>
-            <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">
-            Enter with Facebook
-            </a>
-        </p>
-    {% endif %}
+    <header>
+        <figure> <img src="fondo.jpg" alt="imagenfondo"/> </figure>     
+    </header>
+    <section class="container">
+        <section class="row">
+            <div class= "col-md-6">
+                <h1> {{event.name}} </h1>
+            </div>
+            <div class= "col-md-6">
+                <p> Tiempo Restante:<p>
+                <p> {{event.due_date}} </p> <!-- tendre que poner logica para restar aqui -->
+            </div>
+        </section>
+    <section class="row">
+        <figure class= "col-md-6">
+            <img src="image_evento.jpg" alt="imagenevento"/>
+        </figure>
+        <section class= "col-md-6">
+            <article>
+                <h2>Necesita:</h2>
+                <p>{{ event.goal }}</p>
+                <p>MXN.</p>
+            </article>
+            <article>
+                <h2>Recaudado:</h2>
+                <p>{{ event.progress }}</p>
+                <p>MXN.</p>
+            </article>
+        </section>      
+    </section>
+    <section class="row">
+        <article class= "col-md-4">
+            <h4>Organizador</h4>
+            <p>{{ event.organizers.name }}</p>
+        </article>
+        <article class= "col-md-4">
+            <h4>Ranking del evento</h4> <!-- ranking del organizador mas bien no? -->
+            <p>{{ event.organizers.score }}</p>
+        </article>
+        <article class= "col-md-4">
+            <h4>Zona del evento</h4>
+            <p> {{ event.location_city }} </p>
+        </article>
+    </section>
+    <section class= "row">
+        <article class= "col-md-6">
+                <div>
+                    <h2> Fecha del evento: {{ event.start_date }} a  {{ event.end_date }} </h2>
+                    <p> Chocolate bar powder sweet roll gingerbread fruitcake bear claw powder sweet roll. Oat cake halvah jujubes. Tart candy canes oat cake. Sesame snaps cake croissant danish halvah jelly beans. Gummi bears candy canes croissant toffee cotton candy marzipan wafer. Cake chupa chups lollipop wafer.</p>
+                </div>
+                <div>
+                    <h2> Descripción </h2>
+                    <p> {{ event.description }} </p>
+                </div>
+                <div>
+                    <h2> Requerimientos </h2>
+                    <p> {{ event.requirements }} </p>
+                </div>
+                <div>
+                    <h2> Restricciones </h2>
+                    <p> {{ event.restrictions }} </p>
+                </div>
+        </article>
+        <article class= "col-md-6">
+            <div> 
+                <h2>Primera recompensa<h2>  
+                <p>$250.00</p>
+                <p> Sólo incluye un pase al evento</p>
+            </div>
+            <div>
+                <h2>Segunda recompensa<h2>  
+                <p>$250.00</p>
+                <p> Sólo incluye un pase al evento</p>
+            </div>
+            <div>
+                <h2>Tercera recompensa<h2>  
+                <p>$250.00</p>
+                <p> Sólo incluye un pase al evento</p>
+            </div>  
+        </article>
+    </section>
+    </section>
+    <footer>
+    
+    </footer>
 {% endblock %}
+</html>
