--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <meta name="description" content="{% block meta_description %}{% endblock %}">
     <link rel="stylesheet" href="{% static "css/home.css" %}" />
     <link rel="stylesheet" href="{% static "css/lib/bootstrap.min.css" %}" />
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     {% block head %}{% endblock %}
 </head>
 <body>
