--- a/templates/events/event.html
+++ b/templates/events/event.html
@@ -77,7 +77,17 @@
                 </div>
         </article>
         <article class= "col-md-6">
-            <div> 
+            <div>            
+                {% for tier in event.eventtier.all %}
+                <h2>{{tier.name}}<h2>  
+                <p>{{tier.price}}</p>
+                <p>{{tier.description}}</p>                
+                {% endfor %}
+            </div>
+
+
+
+            <div>
                 <h2>Primera recompensa<h2>  
                 <p>$250.00</p>
                 <p> Sólo incluye un pase al evento</p>
