--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="{% static "css/lib/bootstrap.min.css" %}" />
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    {% block stylesheet %}
+        
+    {% endblock stylesheet %}
     {% block head %}{% endblock %}
 </head>
 <body>
